fix(main) : fix horizontal scroll on large screen

--- a/src/components/Template/Navbar.css
+++ b/src/components/Template/Navbar.css
@@ -21,7 +21,7 @@
     z-index: 99999;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
 }
 .navbar {
     transform: translateY(constant(safe-area-inset-top));
